fixed lot of issues